--- a/src/markdown/mas/vergelijking_leefdaal.Rmd
+++ b/src/markdown/mas/vergelijking_leefdaal.Rmd
@@ -114,7 +114,8 @@ conclusie_df <- data.frame(onderdeel = "oppervlakte",
 
 ## Landgebruiksamenstelling
 
-Landgebruiksamenstelling 2019 -> nieuwe file? om de 3 jaar  
+We beschouwen de rasterlaag van landgebruiksamenstelling van 2019.  
+-> nieuwe file? om de 3 jaar...
 
 ```{r}
 # Lees in landgebruik raster
@@ -163,6 +164,8 @@ landgebruik_leefdaal <- prop_landgebruik_leefdaal %>%
   full_join(design_landgebruik, by = c("naam", "landgebruik_klasse")) %>%
   replace(is.na(.), 0)
 ```
+
+We zien dat het oppervlakte-aandeel akker het grootst is in alle gebieden en dat de proportie voor Kortenberg iets dichter ligt bij Zavelberg dan voor Lovenjoel.
 
 ```{r}
 landgebruik_leefdaal %>%
@@ -214,6 +217,7 @@ landgebruik_diff %>%
                          decreasing = TRUE)) %>%
   ggplot(aes(x = check)) +
     geom_bar() +
+    scale_y_continuous(breaks = seq(0, 10, by = 2), limits = c(0, 10)) +
     labs(y = "aantal keer kleinste verschil\nmet Zavelberg", x = "", 
          title = "Landgebruik") +
     geom_text(aes(label = as.character(..count..)), stat = "count", vjust = -1)
@@ -231,6 +235,7 @@ landgebruik_diff %>%
   distinct() %>%
   ggplot(aes(x = naam, y = som)) +
     geom_bar(stat = "identity") +
+    scale_y_continuous(limits = c(0, 0.4)) +
     labs(y = "verschil met Zavelberg", x = "", 
          title = "Landgebruik") +
     geom_text(aes(label = round(som, digits = 3)), vjust = -1)
@@ -238,7 +243,7 @@ landgebruik_diff %>%
 
 **Conclusie**  
   
-Kortenberg heeft vaker een kleiner verschil in proportie landgebruik met Zavelberg dan Lovenjoel en het totale verschil is ook kleiner.
+Kortenberg heeft vaker een kleiner verschil in proportie landgebruik met Zavelberg dan Lovenjoel en het totale verschil is ook kleiner. Bovendien is het verschil met Zavelberg in akkerproportie kleinst voor Kortenberg.
 
 ```{r}
 conclusie_df <- rbind(conclusie_df, c("landgebruiksamenstelling", "+", "-"))
