--- a/src/markdown/mas/visibility.Rmd
+++ b/src/markdown/mas/visibility.Rmd
@@ -6,6 +6,7 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
+renv::restore()
 knitr::opts_chunk$set(echo = TRUE)
 library(GVI)
 library(terra)
